# AI_DovvyBuddy04

./: .env.example  .gitignore  .prettierignore  AGENTS.md  AI_WORKFLOW.md  LICENSE  README.DEV.md  README.md  benchmark-results-2025-12-31T18-40-40-674Z.json  change_to_3072.py  debug_rag.py  drizzle.config.ts  instrumentation.ts  list_models.py  next.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  sentry.server.config.ts  test_lead_api.py  test_lead_endpoint.sh  tsconfig.json  verify_embedding_config.sh  vitest.config.ts  vitest.setup.ts
backend/: .dockerignore  .env.example  README.md  VERIFICATION_SUMMARY_PR3.2b.md  alembic.ini  mypy.ini  pyproject.toml  pyproject.toml.poetry  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  003_pgvector_embedding_column.py
backend/app/: main.py
backend/app/agents/: base.py  certification.py  config.py  retrieval.py  safety.py  trip.py  types.py
backend/app/core/: config.py  feature_flags.py  security.py
backend/app/db/: base.py  session.py
backend/app/orchestration/: README.md  __init__.py  backup  context_builder.py  conversation_manager.py  emergency_detector.py  emergency_detector_hybrid.py  gemini_orchestrator.py  medical_detector.py  orchestrator.py  (+4 more)
backend/docs/: SERVICES.md
backend/dovvybuddy_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/migrations/: add_fts_column.py
backend/scripts/: __init__.py  analyze_chunk_sizes.py  benchmark_rag.py  benchmark_rag.py.bak  benchmark_rag.py.bak3  ingest_content.py  test_embeddings.py  test_llm.py  test_rag_retrieval.py  validate_content.py  verify_env_config.py  verify_gemini_config.py  verify_ingestion.py
backend/tests/: conftest.py  test_security.py
src/backend/: .env.example  .gitignore  AGENTS.md  README.md  benchmark-results-2026-01-03T23-07-42.json  benchmark-results-2026-01-03T23-10-53.json  benchmark-results-2026-01-03T23-14-26.json  benchmark-results-2026-01-03T23-18-25.json  fix_dimension.py  ingestion_log.txt  openapi.yaml  pyproject.toml  pytest.ini  ruff.toml
(+747 files in other folders)
